--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "magnific-popup": "^1.1.0",
     "wowjs": "^1.1.3"
   }
 }
